fixed Fan to_shapefile

--- a/notebooks/01_markings.ipynb
+++ b/notebooks/01_markings.ipynb
@@ -723,7 +723,7 @@
     "                                  self.data.angle,\n",
     "                                  origin=tuple(self.semi_circle_center))\n",
     "\n",
-    "        df = pd.DataFrame(np.vstack([self.coords[::-1][:2], np.array(rotated)]))\n",
+    "        df = pd.DataFrame(np.vstack([self.coords[::-1][:2], np.array(rotated.xy).T]))\n",
     "        return geom.Polygon(df.round(2).drop_duplicates().values)"
    ]
   },
