added ability to overwrite = True the download of the RED Products

--- a/notebooks/05d_production.projection.ipynb
+++ b/notebooks/05d_production.projection.ipynb
@@ -183,7 +183,7 @@
     "        return obsid, True\n",
     "\n",
     "    for prod in products:\n",
-    "        prod.download()  # the RED_PRODUCT knows how to download\n",
+    "        prod.download(overwrite = overwrite)  # the RED_PRODUCT knows how to download\n",
     "        ret = nocal_hi(prod)  # here the spiceinit happens\n",
     "        if not ret:\n",
     "            return obsid, False\n",
