added tqdm in calc_tile_coordinates to montior progress better

--- a/notebooks/05_production.catalog.ipynb
+++ b/notebooks/05_production.catalog.ipynb
@@ -552,7 +552,7 @@
     "        cubepaths = [P4Mosaic(obsid).mosaic_path for obsid in self.obsids]\n",
     "\n",
     "        todo = []\n",
-    "        for cubepath in cubepaths:\n",
+    "        for cubepath in tqdm(cubepaths,desc=\"Appending Cubepaths\"):\n",
     "            tc = TileCalculator(cubepath, read_data=False, dbname=self.dbname)\n",
     "            if not tc.campt_results_path.exists():\n",
     "                todo.append(cubepath)\n",
