--- a/notebooks/05d_production.projection.ipynb
+++ b/notebooks/05d_production.projection.ipynb
@@ -342,7 +342,7 @@
     "    def __init__(self, cubepath, read_data=True, dbname=None):\n",
     "        self.cubepath = Path(cubepath)\n",
     "        if read_data:\n",
-    "            db = io.DBManager(dbname)\n",
+    "            db = io.DBManager(dbname, obsid=self.img_name)\n",
     "            self.data = db.get_obsid_markings(self.img_name)\n",
     "\n",
     "    @property\n",
