added loop instead of parallelization.

--- a/notebooks/05_production.catalog.ipynb
+++ b/notebooks/05_production.catalog.ipynb
@@ -564,10 +564,11 @@
     "            tilecalc.calc_tile_coords()\n",
     "\n",
     "        if not len(todo) == 0:\n",
-    "            _ = execute_in_parallel(get_tile_coords, todo)##Execute in parallel?\n",
+    "            for cubepath in tqdm(todo,desc=\"Calculating Tile Coords\"):\n",
+    "                _ = get_tile_coords(cubepath)\n",
     "\n",
     "        bucket = []\n",
-    "        for cubepath in tqdm(cubepaths):\n",
+    "        for cubepath in tqdm(cubepaths,desc=\"Creating Cubepath Bucket\"):\n",
     "            tc = TileCalculator(cubepath, read_data=False, dbname=self.dbname)\n",
     "            bucket.append(tc.tile_coords_df)\n",
     "        coords = pd.concat(bucket, ignore_index=True, sort=False)\n",
