added option ot turn of the creation of RED45 mosaics.

--- a/notebooks/05_production.catalog.ipynb
+++ b/notebooks/05_production.catalog.ipynb
@@ -815,7 +815,7 @@
     "        # merging metadata\n",
     "        self.merge_all()\n",
     "\n",
-    "    def produce_single_obsid(self, obsid:str):\n",
+    "    def produce_single_obsid(self, obsid:str,  makeMosaics = True):\n",
     "        \"\"\"Clusters and creates all obsid data without merging \n",
     "           as this should only be done on the full catalog. This\n",
     "           is meant for repairing single obsids\n",
@@ -824,6 +824,8 @@
     "        ----------\n",
     "        obsid : str\n",
     "            One Singular obsid\n",
+    "        makeMosaics : bool\n",
+    "            wether you want to redownload and create the RED45 mosaics (not always necessary when rerunning)\n",
     "        \"\"\"\n",
     "\n",
     "        fan_id = fan_id_generator()\n",
@@ -838,7 +840,9 @@
     "        LOGGER.info(f\"Start fnotching for {obsid}\")\n",
     "        fnotch_obsid(obsid,savedir=self.catalog)\n",
     "\n",
-    "        create_RED45_mosaic(obsid)\n",
+    "        if makeMosaics:\n",
+    "            create_RED45_mosaic(obsid)\n",
+    "        \n",
     "        self.mark_done(obsid)\n",
     "\n"
    ]
