Added Warning when some obsids that were clustered do not have data from the clustering.

--- a/notebooks/05_production.catalog.ipynb
+++ b/notebooks/05_production.catalog.ipynb
@@ -680,10 +680,20 @@
     "        blotches = pd.read_csv(self.blotch_file)\n",
     "        combined = pd.concat([fans, blotches], sort=False)\n",
     "\n",
-    "        for obsid in tqdm(self.obsids):\n",
+    "        obsids_with_data = combined.image_name.unique()\n",
+    "        \n",
+    "        if self.obsids.size == obsids_with_data.size:\n",
+    "            \n",
+    "            missing = list(set(self.obsids) - set(obsids_with_data))\n",
+    "\n",
+    "            LOGGER.warn(\"The following obsids have no data from clustering\")\n",
+    "            LOGGER.warn(missing)\n",
+    "\n",
+    "        for obsid in tqdm(obsids_with_data):\n",
     "            data = combined[combined.image_name == obsid]\n",
     "            xy = XY2LATLON(data, self.savefolder, overwrite=self.overwrite)\n",
     "            xy.process_inpath()\n",
+    "\n",
     "\n",
     "    def collect_marking_coordinates(self):\n",
     "        bucket = []\n",
