Obsid is a list and does not have an attribute size

--- a/notebooks/05_production.catalog.ipynb
+++ b/notebooks/05_production.catalog.ipynb
@@ -682,7 +682,7 @@
     "\n",
     "        obsids_with_data = combined.image_name.unique()\n",
     "        \n",
-    "        if self.obsids.size == obsids_with_data.size:\n",
+    "        if len(self.obsids) == len(obsids_with_data):\n",
     "            \n",
     "            missing = list(set(self.obsids) - set(obsids_with_data))\n",
     "\n",
