Leftover Obsid handling added for merging results

--- a/notebooks/05_production.catalog.ipynb
+++ b/notebooks/05_production.catalog.ipynb
@@ -682,7 +682,7 @@
     "\n",
     "        obsids_with_data = combined.image_name.unique()\n",
     "        \n",
-    "        if len(self.obsids) == len(obsids_with_data):\n",
+    "        if len(self.obsids) != len(obsids_with_data):\n",
     "            \n",
     "            missing = list(set(self.obsids) - set(obsids_with_data))\n",
     "\n",
@@ -695,9 +695,14 @@
     "            xy.process_inpath()\n",
     "\n",
     "\n",
-    "    def collect_marking_coordinates(self):\n",
+    "    def collect_marking_coordinates(self,obsids = None):\n",
     "        bucket = []\n",
-    "        for obsid in self.obsids:\n",
+    "\n",
+    "        if obsids == None:\n",
+    "            working_obsids = self.obsids\n",
+    "        else:\n",
+    "            working_obsids = obsids\n",
+    "        for obsid in working_obsids:\n",
     "            xy = XY2LATLON(None, self.savefolder, obsid=obsid)\n",
     "            bucket.append(pd.read_csv(xy.savepath).assign(obsid=obsid))\n",
     "\n",
@@ -713,7 +718,13 @@
     "    def merge_campt_results(self, fans, blotches):\n",
     "        INDEX = [\"obsid\", \"image_x\", \"image_y\"]\n",
     "\n",
-    "        ground = self.collect_marking_coordinates().round(decimals=7)\n",
+    "        ## This part is necessary for the case in which not all obsids have data left after clustering\n",
+    "        obsids_1 = fans.image_ids.unique()\n",
+    "        obsids_2 = blotches.image_ids.unique()\n",
+    "        image_ids = np.concatenate(obsids_1,obsids_2)\n",
+    "        image_ids = np.unique(image_ids)\n",
+    "\n",
+    "        ground = self.collect_marking_coordinates(image_ids).round(decimals=7)\n",
     "        # ground = self.fix_marking_coordinates_precision(ground)\n",
     "        fans = fans.merge(ground[self.COLS_TO_MERGE], on=INDEX)\n",
     "        blotches = blotches.merge(ground[self.COLS_TO_MERGE], on=INDEX)\n",
