fix wrong accessing

--- a/notebooks/05_production.catalog.ipynb
+++ b/notebooks/05_production.catalog.ipynb
@@ -599,9 +599,9 @@
     "        \"\"\"\n",
     "        out = []\n",
     "        for df in [fans, blotches]:\n",
-    "            averaged = df.groupby(\"marking_id\").mean(numeric_only=True)\n",
-    "            tmp = df.drop_duplicates(subset=\"marking_id\").set_index(\"marking_id\")\n",
-    "            averaged = averaged.join(tmp[[\"image_id\", \"obsid\"]], how=\"inner\")\n",
+    "            averaged = df.groupby([\"obsid\",\"marking_id\"]).mean(numeric_only=True)\n",
+    "            tmp = df.drop_duplicates(subset=[\"marking_id\",\"obsid\"]).set_index([\"obsid\",\"marking_id\"])\n",
+    "            averaged = averaged.join(tmp[[\"image_id\"]],how=\"inner\")\n",
     "            out.append(averaged.reset_index())\n",
     "\n",
     "        return out\n",
@@ -655,7 +655,7 @@
     "            axis=1,\n",
     "            inplace=True,\n",
     "        )\n",
-    "        fans[self.FAN_COLUMNS_AS_PUBLISHED].to_csv(self.fan_merged, index=False, mode = \"a\")\n",
+    "        fans[self.FAN_COLUMNS_AS_PUBLISHED].to_csv(self.fan_merged, index=False, mode = \"w\")\n",
     "\n",
     "        LOGGER.info(\"Wrote %s\", str(self.fan_merged))\n",
     "\n",
@@ -671,7 +671,7 @@
     "            inplace=True,\n",
     "        )\n",
     "        blotches[self.BLOTCH_COLUMNS_AS_PUBLISHED].to_csv(\n",
-    "            self.blotch_merged, index=False, mode = \"a\"\n",
+    "            self.blotch_merged, index=False, mode = \"w\"\n",
     "        )\n",
     "        LOGGER.info(\"Wrote %s\", str(self.blotch_merged))\n",
     "\n",
@@ -698,10 +698,11 @@
     "    def collect_marking_coordinates(self,obsids = None):\n",
     "        bucket = []\n",
     "\n",
-    "        if obsids == None:\n",
-    "            working_obsids = self.obsids\n",
-    "        else:\n",
+    "        if type(obsids) is np.ndarray:\n",
     "            working_obsids = obsids\n",
+    "        else:\n",
+    "            working_obsids = self.obsids\n",
+    "            \n",
     "        for obsid in working_obsids:\n",
     "            xy = XY2LATLON(None, self.savefolder, obsid=obsid)\n",
     "            bucket.append(pd.read_csv(xy.savepath).assign(obsid=obsid))\n",
@@ -719,12 +720,12 @@
     "        INDEX = [\"obsid\", \"image_x\", \"image_y\"]\n",
     "\n",
     "        ## This part is necessary for the case in which not all obsids have data left after clustering\n",
-    "        obsids_1 = fans.image_ids.unique()\n",
-    "        obsids_2 = blotches.image_ids.unique()\n",
-    "        image_ids = np.concatenate(obsids_1,obsids_2)\n",
-    "        image_ids = np.unique(image_ids)\n",
+    "        obsids_1 = fans.obsid.unique()\n",
+    "        obsids_2 = blotches.obsid.unique()\n",
+    "        obsids = np.append(obsids_1,obsids_2)\n",
+    "        obsids = np.unique(obsids)\n",
     "\n",
-    "        ground = self.collect_marking_coordinates(image_ids).round(decimals=7)\n",
+    "        ground = self.collect_marking_coordinates(obsids).round(decimals=7)\n",
     "        # ground = self.fix_marking_coordinates_precision(ground)\n",
     "        fans = fans.merge(ground[self.COLS_TO_MERGE], on=INDEX)\n",
     "        blotches = blotches.merge(ground[self.COLS_TO_MERGE], on=INDEX)\n",
