--- a/notebooks/02_plotting.ipynb
+++ b/notebooks/02_plotting.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +347,7 @@
    "source": [
     "#| export\n",
     "\n",
-    "def plot_windrose_histogram(df,ax=None,segmentsize = 3.6, color = \"tab:blue\", label = None,):\n",
+    "def plot_windrose_histogram(df,ax=None,segmentsize = 3.6, color = \"tab:blue\", label = None, alpha=0.5):\n",
     "    \"\"\"Create a Windrose like histogram from a Dataframe containing the fan data.\n",
     "       The fan dataframe should at least contain the following columns :[\"angle\",\"north_azimuth\"]\n",
     "\n",
@@ -375,7 +375,7 @@
     "    if ax is None:\n",
     "        ax = plt.subplot(projection='polar')\n",
     "    \n",
-    "    ax.bar(theta[:-1],radii, width=width, color=color,label=label)\n",
+    "    ax.bar(theta[:-1],radii, width=width, color=color,label=label, alpha=alpha)\n",
     "\n",
     "    return ax\n",
     "\n",
@@ -410,12 +410,14 @@
     "\n",
     "def get_colorscale(nr):\n",
     "    color_scale = np.linspace(0,1,nr)\n",
-    "    if nr > 20:   \n",
-    "        cmap = colormaps[\"turbo\"](color_scale)\n",
+    "    if nr < 9:\n",
+    "        cmap = colormaps[\"Pastel1\"]\n",
+    "    if nr < 20:   \n",
+    "        cmap = colormaps[\"tab20\"]\n",
     "    else:\n",
-    "        cmap = colormaps[\"tab20\"](color_scale)\n",
+    "        cmap = colormaps[\"turbo\"]\n",
     "\n",
-    "    return cmap\n",
+    "    return cmap(color_scale)\n",
     "\n",
     "def differentiate_ls(df,ls_bin = 4, ):\n",
     "\n",
@@ -426,7 +428,7 @@
     "\n",
     "    for i,ls in enumerate(ls_bin[:-1]):\n",
     "        df_sub = df[df.l_s.between(left=ls_bin[i],right=ls_bin[i+1])]\n",
-    "        label = f\"[{ls_bin[i]:.1f}, {ls_bin[i+1]:.1f}]\"\n",
+    "        label = f\"[{ls_bin[i]:.0f}, {ls_bin[i+1]:.0f}]\"\n",
     "        ax = plot_windrose_histogram(df_sub, ax, color=cmap[i], label=label)\n",
     "    \n",
     "    initialize_polar_axes(ax)\n",
@@ -434,13 +436,6 @@
     "\n",
     "    return ax\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
