added number of fans pers l_s bin

--- a/notebooks/02_plotting.ipynb
+++ b/notebooks/02_plotting.ipynb
@@ -416,7 +416,6 @@
     "        cmap = colormaps[\"tab20\"]\n",
     "    else:\n",
     "        cmap = colormaps[\"turbo\"]\n",
-    "\n",
     "    return cmap(color_scale)\n",
     "\n",
     "def differentiate_ls(df,ls_bin = 4, ):\n",
@@ -428,7 +427,11 @@
     "\n",
     "    for i,ls in enumerate(ls_bin[:-1]):\n",
     "        df_sub = df[df.l_s.between(left=ls_bin[i],right=ls_bin[i+1])]\n",
-    "        label = f\"[{ls_bin[i]:.0f}, {ls_bin[i+1]:.0f}]\"\n",
+    "\n",
+    "        label1 = f\"[{ls_bin[i]:.0f}, {ls_bin[i+1]:.0f}]\"\n",
+    "        label2 = f\"#Fans = {df.shape[0]}\"\n",
+    "        label = label1 + \"\\n\" + label2\n",
+    "        \n",
     "        ax = plot_windrose_histogram(df_sub, ax, color=cmap[i], label=label)\n",
     "    \n",
     "    initialize_polar_axes(ax)\n",
