--- a/notebooks/03_stats.ipynb
+++ b/notebooks/03_stats.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,22 +38,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#| export \n",
     "def define_martian_year(df, time_col_name):\n",
+    "    \"\"\"This Function Modifies the Dataframe it is given. And adds a Column named \"MY\",\n",
+    "        which signifies the Mars Year a Datapoint was taken.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    df : pandas.DataFrame\n",
+    "        A Dataframe for which we wish to calculate the Mars Years\n",
+    "    time_col_name : str\n",
+    "        The Name of the column which has the Dates \n",
+    "        which to correspond to Mars Years.\n",
+    "    \"\"\"\n",
     "    mars_timestamps = {k: pd.to_datetime(v) for k, v in mars_years.items()}\n",
     "    df[\"MY\"] = 0\n",
     "    for yr, t in mars_timestamps.items():\n",
     "        df.loc[df[time_col_name] > t, \"MY\"] = yr\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "planetary",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
