Change Windrose Histogram to emit Normalized Histogram

--- a/notebooks/02_plotting.ipynb
+++ b/notebooks/02_plotting.ipynb
@@ -387,7 +387,7 @@
     "    direction = (direction - north_azimuth)%360\n",
     "\n",
     "    bins = np.arange(0,360+segmentsize,segmentsize)\n",
-    "    counts,edges = np.histogram(direction,bins,density=False)\n",
+    "    counts,edges = np.histogram(direction,bins,density=True)\n",
     "\n",
     "    theta = np.deg2rad(bins)\n",
     "    radii = counts\n",
