reorganized for more modularity

--- a/notebooks/02_plotting.ipynb
+++ b/notebooks/02_plotting.ipynb
@@ -347,47 +347,17 @@
    "source": [
     "#| export\n",
     "\n",
-    "def plot_windrose_histogram(df,ax=None,segmentsize = 3.6, color = \"tab:blue\", label = None, alpha=0.5):\n",
-    "    \"\"\"Create a Windrose like histogram from a Dataframe containing the fan data.\n",
-    "       The fan dataframe should at least contain the following columns :[\"angle\",\"north_azimuth\"]\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    df : pandas.DataFrame\n",
-    "        The Dataframe containing the fan data\n",
-    "    ax : matplotlib.Axes.axes, optional\n",
-    "        A previously existing axes, by default None\n",
-    "    segmentsize : float, optional\n",
-    "        _description_, by default 4\n",
-    "    color : str, optional\n",
-    "        _description_, by default \"tab:blue\"\n",
-    "    label : _type_, optional\n",
-    "        _description_, by default None\n",
-    "\n",
-    "    Returns\n",
-    "    -------\n",
-    "    _type_\n",
-    "        _description_\n",
-    "    \"\"\"\n",
-    "    theta, radii = compute_direction_histogram(df, segmentsize)\n",
-    "    width = np.diff(theta)\n",
-    "\n",
-    "    if ax is None:\n",
-    "        ax = plt.subplot(projection='polar')\n",
+    "def compute_direction_histogram(df, segmentsize, density=True):\n",
     "    \n",
-    "    ax.bar(theta[:-1],radii, width=width, color=color,label=label, alpha=alpha)\n",
-    "\n",
-    "    return ax\n",
-    "\n",
-    "def compute_direction_histogram(df, segmentsize):\n",
     "    direction = df[\"angle\"]\n",
-    "    \n",
     "    north_azimuth = np.deg2rad(df[\"north_azimuth\"])\n",
-    "\n",
     "    direction = (direction - north_azimuth)%360\n",
-    "\n",
     "    bins = np.arange(0,360+segmentsize,segmentsize)\n",
-    "    counts,edges = np.histogram(direction,bins,density=True)\n",
+    "    if df.shape[0] != 0:\n",
+    "        counts,edges = np.histogram(direction,bins,density=density)\n",
+    "    else:\n",
+    "        #Maybe issue a warning\n",
+    "        return [0,0],[0,0]\n",
     "\n",
     "    theta = np.deg2rad(bins)\n",
     "    radii = counts\n",
@@ -418,10 +388,9 @@
     "        cmap = colormaps[\"turbo\"]\n",
     "    return cmap(color_scale)\n",
     "\n",
-    "def differentiate_ls(df,ls_bin = 4, ):\n",
     "\n",
-    "    ax = plt.subplot(projection = \"polar\")\n",
-    "    \n",
+    "def _draw_histogram(ax, df, ls_bin = 4, density = True, segmentsize=3.6, alpha=0.5):\n",
+    "\n",
     "    _,ls_bin = pd.cut(df.l_s, bins=ls_bin,retbins=True)\n",
     "    cmap = get_colorscale(ls_bin.size - 1)\n",
     "\n",
@@ -433,12 +402,25 @@
     "        label3 = f\"#images = {df_sub.obsid.unique().size}\"\n",
     "        label = label1 + \"\\n\" + label2 + \"\\n\" + label3\n",
     "\n",
-    "        ax = plot_windrose_histogram(df_sub, ax, color=cmap[i], label=label)\n",
-    "    \n",
+    "        theta, radii = compute_direction_histogram(df_sub, segmentsize, density=density)\n",
+    "        width = np.diff(theta)\n",
+    "        ax.bar(theta[:-1],radii, width=width, color=cmap[i],label=label, alpha=alpha)\n",
+    "\n",
+    "    return ax\n",
+    "\n",
+    "def histogram_polar(df,ls_bin = 4, segmentsize=3.6, alpha=0.5):\n",
+    "\n",
+    "    ax = plt.subplot(projection = \"polar\")\n",
+    "    ax = _draw_histogram(ax, df, ls_bin=ls_bin, segmentsize=segmentsize, alpha=alpha)\n",
     "    initialize_polar_axes(ax)\n",
     "    ax.legend(bbox_to_anchor=(1.05, 1), loc=\"upper left\")\n",
     "\n",
-    "    return ax\n"
+    "    return ax\n",
+    "\n",
+    "def histogram_unnormalized(df, ls_bin = 4, segmentsize=3.6, alpha=0.5):\n",
+    "    ax = plt.subplot()\n",
+    "    ax = _draw_histogram(ax, df, ls_bin=ls_bin, density=False ,segmentsize=segmentsize, alpha=alpha)\n",
+    "    return ax"
    ]
   },
   {
@@ -499,7 +481,7 @@
     "Data = pd.read_csv(fpath)\n",
     "Data = Data[Data.obsid.isin(obsid_potsdam)]\n",
     "\n",
-    "differentiate_ls(Data,ls_bin=2)"
+    "histogram_polar(Data,ls_bin=2)"
    ]
   }
  ],
