added per_obsid plotting method.

--- a/notebooks/02_plotting.ipynb
+++ b/notebooks/02_plotting.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,30 +392,80 @@
     "        cmap = colormaps[\"turbo\"]\n",
     "    return cmap(color_scale)\n",
     "\n",
+    "def _get_filtered_index(df,ls_bin, per_obsid=False):\n",
     "\n",
-    "def _draw_histogram(ax, df, ls_bin = 4, density = True, segmentsize=3.6, alpha=0.5, degrees=False):\n",
+    "    indexes = []\n",
+    "    label_list = []\n",
+    "    if per_obsid:\n",
+    "        obsids = df.obsid.unique()\n",
+    "        for id in obsids:    \n",
+    "            ind = df.obsid == id\n",
+    "            indexes.append(ind)\n",
+    "            label_list.append(id)\n",
+    "        \n",
+    "        return indexes, label_list\n",
+    "    \n",
+    "    else:\n",
+    "        _,ls_bin = pd.cut(df.l_s, bins=ls_bin,retbins=True)\n",
     "\n",
-    "    _,ls_bin = pd.cut(df.l_s, bins=ls_bin,retbins=True)\n",
-    "    cmap = get_colorscale(ls_bin.size - 1)\n",
+    "        for i,ls in enumerate(ls_bin[:-1]):\n",
     "\n",
-    "    for i,ls in enumerate(ls_bin[:-1]):\n",
-    "        df_sub = df[df.l_s.between(left=ls_bin[i],right=ls_bin[i+1])]\n",
+    "            ind = df.l_s.between(left=ls_bin[i],right=ls_bin[i+1])\n",
+    "            df_sub = df[ind]\n",
+    "            label1 = f\"[{ls_bin[i]:.0f}, {ls_bin[i+1]:.0f}]\"\n",
+    "            label2 = f\"#Fans = {df_sub.shape[0]}\"\n",
+    "            label3 = f\"#images = {df_sub.obsid.unique().size}\"\n",
+    "            label = label1 + \"\\n\" + label2 + \"\\n\" + label3\n",
     "\n",
-    "        label1 = f\"[{ls_bin[i]:.0f}, {ls_bin[i+1]:.0f}]\"\n",
-    "        label2 = f\"#Fans = {df_sub.shape[0]}\"\n",
-    "        label3 = f\"#images = {df_sub.obsid.unique().size}\"\n",
-    "        label = label1 + \"\\n\" + label2 + \"\\n\" + label3\n",
+    "            indexes.append(ind)\n",
+    "            label_list.append(label)\n",
     "\n",
+    "        return indexes, label_list\n",
+    "\n",
+    "\n",
+    "def _draw_histogram(ax, df, ls_bin = 4, per_obsid=False, density = True, segmentsize=3.6, alpha=0.5, degrees=False, cutoff = None):\n",
+    "\n",
+    "    indexes,label_list = _get_filtered_index(df,ls_bin,per_obsid)\n",
+    "\n",
+    "    cmap = get_colorscale(len(indexes))\n",
+    "\n",
+    "\n",
+    "    for i in range(0,len(indexes)):\n",
+    "        df_sub = df[indexes[i]]\n",
+    "\n",
+    "        if (cutoff is not None) and (df_sub.shape[0] < cutoff):\n",
+    "            continue\n",
+    "        \n",
+    "        label = label_list[i]\n",
     "        theta, radii = compute_direction_histogram(df_sub, segmentsize, density=density, degrees=degrees)\n",
     "        width = np.diff(theta)\n",
     "        ax.bar(theta[:-1],radii, width=width, color=cmap[i],label=label, alpha=alpha)\n",
     "\n",
     "    return ax\n",
     "\n",
-    "def histogram_polar(df,ls_bin = 4, segmentsize=3.6, alpha=0.5):\n",
+    "def histogram_polar(df,ls_bin = 4, per_obsid = False , segmentsize=3.6, alpha=0.5, cutoff = None,):\n",
+    "    \"\"\"\n",
+    "    Plots a histogram in polar coordinates.\n",
+    "    Parameters:\n",
+    "    df : pandas.DataFrame\n",
+    "        The data frame containing the data to be plotted.\n",
+    "    ls_bin : int, optional\n",
+    "        The bin size for the histogram (default is 4).\n",
+    "    per_obsid : bool, optional\n",
+    "        If True, the histogram is plotted per observation ID (default is False).\n",
+    "    segmentsize : float, optional\n",
+    "        The size of each segment in the histogram (default is 3.6).\n",
+    "    alpha : float, optional\n",
+    "        The transparency level of the histogram bars (default is 0.5).\n",
+    "    cutoff : float, optional\n",
+    "        A cutoff value for the data (default is None).\n",
+    "    Returns:\n",
+    "    matplotlib.axes._subplots.PolarAxesSubplot\n",
+    "        The polar axes with the histogram plotted.\n",
+    "    \"\"\"\n",
     "\n",
     "    ax = plt.subplot(projection = \"polar\")\n",
-    "    ax = _draw_histogram(ax, df, ls_bin=ls_bin, segmentsize=segmentsize, alpha=alpha)\n",
+    "    ax = _draw_histogram(ax, df, ls_bin=ls_bin, per_obsid=per_obsid, segmentsize=segmentsize, alpha=alpha, cutoff= cutoff)\n",
     "    initialize_polar_axes(ax)\n",
     "    ax.legend(bbox_to_anchor=(1.05, 1), loc=\"upper left\")\n",
     "\n",
@@ -436,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +495,7 @@
        "<PolarAxes: >"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
