Added more Docs

--- a/notebooks/05_production.catalog.ipynb
+++ b/notebooks/05_production.catalog.ipynb
@@ -126,6 +126,19 @@
     "\n",
     "\n",
     "def get_L1A_paths(obsid, savefolder):\n",
+    "    \"\"\"\n",
+    "    Retrieve L1A observation paths for a given observation ID.\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    obsid : str\n",
+    "        The observation ID for which to retrieve the paths.\n",
+    "    savefolder : str\n",
+    "        The directory path where the data is stored.\n",
+    "    Returns\n",
+    "    -------\n",
+    "    list\n",
+    "        A list of paths corresponding to the L1A observation data.\n",
+    "    \"\"\"\n",
     "    pm = io.PathManager(obsid=obsid, datapath=savefolder)\n",
     "    paths = pm.get_obsid_paths(\"L1A\")\n",
     "    return paths"
@@ -176,9 +189,24 @@
     "# | export\n",
     "\n",
     "def fnotch_obsid(obsid=None, savedir=None, fnotch_via_obsid=False, imgid=None):\n",
-    "    \"\"\"\n",
-    "    fnotch_via_obsid: bool, optional\n",
-    "        Switch to control if fnotching happens per image_id or per obsid\n",
+    "    \"\"\"Perform fnotching on HiRISE images based on observation ID or image ID.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    obsid : str, optional\n",
+    "        The observation ID to be processed.\n",
+    "    savedir : str, optional\n",
+    "        The directory where the results will be saved.\n",
+    "    fnotch_via_obsid : bool, optional\n",
+    "        Switch to control if fnotching happens per observation ID (obsid) or per image ID.\n",
+    "        If True, fnotching is done per observation ID. If False, fnotching is done per image ID.\n",
+    "    imgid : str, optional\n",
+    "        The image ID to be processed. This parameter is currently not used in the function.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    str\n",
+    "        The observation ID that was processed.\n",
     "    \"\"\"\n",
     "    from p4tools.production import fnotching\n",
     "\n",
@@ -445,6 +473,11 @@
     "\n",
     "    @obsids.setter\n",
     "    def obsids(self, values):\n",
+    "        \"\"\"\n",
+    "        Sets the observation IDs.\n",
+    "        Parameters:\n",
+    "        values (list or array-like): A list or array of observation IDs to be set.\n",
+    "        \"\"\"\n",
     "        self._obsids = values\n",
     "\n",
     "    @property\n",
@@ -465,6 +498,13 @@
     "\n",
     "    @property\n",
     "    def fan_merged(self):\n",
+    "        \"\"\"\n",
+    "        Generates the file path for the merged fan metadata CSV file.\n",
+    "        Returns:\n",
+    "            pathlib.Path: The path to the merged fan metadata CSV file, \n",
+    "                          constructed by appending '_meta_merged.csv' to the stem of the original fan file.\n",
+    "        \"\"\"\n",
+    "        \n",
     "        return self.fan_file.parent / f\"{self.fan_file.stem}_meta_merged.csv\"\n",
     "\n",
     "    @property\n",
@@ -741,7 +781,23 @@
     "\n",
     "\n",
     "    def launch_parallel_production(self,parallel_tasks : int = 10):\n",
-    "        \n",
+    "        \"\"\"\n",
+    "        Launches the production process in parallel.\n",
+    "        This method performs several tasks in parallel, including clustering, \n",
+    "        fnotching, and creating mosaics. It also generates summary CSV files, \n",
+    "        calculates ground coordinates, and writes metadata.\n",
+    "\n",
+    "        USE AT YOUR OWN RISK. Does not scale very well. \n",
+    "        It is recommended to do process paraellism with:\n",
+    "        ReleaseManager.produce_single_obsid(...)\n",
+    "\n",
+    "        Args:\n",
+    "            parallel_tasks (int, optional): The number of parallel tasks to run. \n",
+    "                                            Defaults to 10.\n",
+    "        Raises:\n",
+    "            Exception: If there is an issue with slicing the obsids list.\n",
+    "        \"\"\"\n",
+    "\n",
     "        self.check_for_todo()\n",
     "        \n",
     "        fan_id = fan_id_generator()\n",
@@ -823,8 +879,6 @@
     "        LOGGER.info(\"Creating L1C fan and blotch database files.\")\n",
     "        create_roi_file(self.obsids, self.catalog, self.catalog)\n",
     "\n",
-    "\n",
-    "        \n",
     "        LOGGER.info(\"Calculating the center ground coordinates for all P4 tiles.\")\n",
     "        self.calc_tile_coordinates()\n",
     "\n",
@@ -877,6 +931,17 @@
    "source": [
     "# | export\n",
     "def read_csvfiles_into_lists_of_frames(folders):\n",
+    "    \"\"\"\n",
+    "    Reads CSV files from given folders into lists of DataFrames.\n",
+    "    This function iterates over a list of folders, reads CSV files within those folders,\n",
+    "    and categorizes them into two lists: 'fan' and 'blotch'. The categorization is based\n",
+    "    on the filename ending with 'fans.csv' or blotch.csv.\n",
+    "    Args:\n",
+    "        folders (list of pathlib.Path): A list of folder paths to search for CSV files.\n",
+    "    Returns:\n",
+    "        dict: A dictionary with two keys, 'fan' and 'blotch', each containing a list of\n",
+    "              pandas DataFrames read from the CSV files.\n",
+    "    \"\"\"\n",
     "    \n",
     "    bucket = dict(fan=[], blotch=[])\n",
     "    for folder in folders:\n",
