Added the fix_marking_ids function to fix marking_ids after parallel processing

--- a/notebooks/05_production.catalog.ipynb
+++ b/notebooks/05_production.catalog.ipynb
@@ -639,7 +639,8 @@
     "        \"\"\"\n",
     "        out = []\n",
     "        for df in [fans, blotches]:\n",
-    "            averaged = df.groupby([\"obsid\",\"marking_id\"]).mean(numeric_only=True)\n",
+    "            #This grouping by obsid and marking_id is necessary for the case that we do parallel processing which will create duplicate marking ids per obsid\n",
+    "            averaged = df.groupby([\"obsid\",\"marking_id\"]).mean(numeric_only=True) \n",
     "            tmp = df.drop_duplicates(subset=[\"marking_id\",\"obsid\"]).set_index([\"obsid\",\"marking_id\"])\n",
     "            averaged = averaged.join(tmp[[\"image_id\"]],how=\"inner\")\n",
     "            out.append(averaged.reset_index())\n",
@@ -770,6 +771,28 @@
     "        fans = fans.merge(ground[self.COLS_TO_MERGE], on=INDEX)\n",
     "        blotches = blotches.merge(ground[self.COLS_TO_MERGE], on=INDEX)\n",
     "        return fans, blotches\n",
+    "    \n",
+    "    def fix_marking_ids(self):\n",
+    "        \"\"\"\n",
+    "        This function is supposed to be called to fix the marking IDs when parallely proccessed\n",
+    "        \"\"\"\n",
+    "\n",
+    "        bucket = [(self.fan_merged,fan_id_generator),(self.blotch_merged,blotch_id_generator)]\n",
+    "        \n",
+    "        for path, gen in bucket:\n",
+    "            df = pd.read_csv(path)\n",
+    "            length = df.shape[0]\n",
+    "\n",
+    "            markingid = np.zeros(df.shape[0],dtype=str)\n",
+    "            generator_marking = gen()\n",
+    "\n",
+    "            markingid = []\n",
+    "            for i in range(length):\n",
+    "\n",
+    "                markingid.append(next(generator_marking))\n",
+    "\n",
+    "            df[\"marking_id\"] = markingid\n",
+    "            assert df.marking_id.unique().size == length\n",
     "\n",
     "    def launch_catalog_production(self,kind : str = \"serial\", parallel_tasks : int = 10):\n",
     "\n",
