Didnt save fixed Dataframe correctly

--- a/notebooks/05_production.catalog.ipynb
+++ b/notebooks/05_production.catalog.ipynb
@@ -793,6 +793,8 @@
     "\n",
     "            df[\"marking_id\"] = markingid\n",
     "            assert df.marking_id.unique().size == length\n",
+    "            df.to_csv(path, index=False)\n",
+    "\n",
     "\n",
     "    def launch_catalog_production(self,kind : str = \"serial\", parallel_tasks : int = 10):\n",
     "\n",
